syntax = "proto3";
package proto;

message BaseInfo {
}

message UserInfo {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    repeated Address addresses = 5;
}

message UserInfoList {
    repeated UserInfo list = 1;
}

message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5;
}

message ChatInfo {
    int64 id = 1;
    int32 type = 2;
    ChatContext context = 3;
    int64 time = 4;
    int64 sender = 5;
    int64 receiver = 6;
    int64 topic = 7;
}

message ChatContext {
    int64 type = 1;
    string context = 2;
}
