syntax = "proto3";
//option go_package = "~/go/src/go_game_server/proto/message";
package proto;
import "mcmd.proto";
import "entity.proto";


message GetUserInfoRequest {
    repeated string name = 1;
    BaseInfo base = 2;
    MessageCmd cmd = 3;
}
message GetUserInfoReply {
    repeated UserInfo userList = 1;
}
