syntax = "proto3";
package proto;
//import "mcmd.proto";
import "message.proto";
import "entity.proto";

service Rpc {
    rpc GatUserInfo (GetUserInfoRequest) returns (GetUserInfoReply) {}

    rpc SendMessage (stream ChatInfo) returns (stream ChatInfo) {}

}